# server-notifications

./: .dockerignore  .env  Cargo.toml  DOCKER_WORKFLOW.md  Dockerfile  INSTALL_DOCKER.md  MONITORING.md  QUICKSTART.md  README.md  SETUP_RUST_OUTSIDE_DOCKER.md  UNINSTALL_DOCKER.md  VERIFY.md  debug-container.sh  diagnose-container.sh  docker-compose.dev.yml  docker-compose.yml  grafana-datasources.yml  install-docker-ubuntu.sh  install-docker.sh  loki-config.yml  prometheus.yml  promtail-config.yml  test-docker-build.sh  uninstall-docker.sh  verify-monitoring.sh
src/: main.rs  response.rs  types.rs
src/application/: mod.rs  notification.rs  session.rs  user.rs
src/application/analytics/: get_notification_reads.rs  mod.rs
src/application/business/: get_business.rs  mod.rs
src/application/notification/: enqueue_track_notification.rs  get_external_notification.rs  get_getstream_unread.rs  get_user_notifications.rs  get_users_notifications.rs  mod.rs
src/application/queue/: add_job.rs  mod.rs
src/application/redis/: connect_redis.rs  mod.rs
src/application/session/: get_session.rs  mod.rs
src/application/user/: get_user.rs  get_user_by_business_ids.rs  get_users.rs  mod.rs
src/controllers/: mod.rs  notification.rs
src/controllers/notification/: get_notification.rs  mod.rs
src/domain/: mod.rs  notification.rs  session.rs  user.rs
src/domain/analytics/: mod.rs
src/domain/business/: mod.rs
src/domain/external_notification/: mod.rs
src/domain/getstream/: mod.rs
src/domain/notification/: mod.rs
src/domain/queue/: mod.rs
src/domain/session/: mod.rs
src/domain/user/: mod.rs
src/infrastructure/: db.rs  redis.rs  s3.rs  services.rs
src/infrastructure/analytics/: mongo.rs
src/infrastructure/business/: mongo.rs
src/infrastructure/notification/: mod.rs  mongo.rs  notification.rs  random.rs
src/infrastructure/providers/: analytics.rs  business.rs  mod.rs  notification.rs  queue.rs  redis.rs  session.rs  storage.rs  user.rs
src/infrastructure/queue/: mod.rs  redis.rs
src/infrastructure/user/: mongo.rs
src/mappers/: business.rs  common.rs  mod.rs  notification.rs  request_headers.rs  session.rs  user.rs
src/middleware/: auth.rs  logging.rs  mod.rs  platform.rs  session.rs
src/routes/: health.rs  mod.rs  notification.rs
(+1 files in other folders)
