[package]
name = "server-notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["clock"] }
jsonwebtoken = "9"
dotenvy = "0.15"
async-trait = "0.1"
thiserror = "1"
rand = "0.8"
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime", "zlib-compression"] }
bson = "2"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
aws-config = "1.1"
aws-sdk-s3 = "1.17"
aws-credential-types = "1.1"
http = "1"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

