[package]
name = "server-notifications"
version = "1.0.0"
edition = "2021"
default-run = "server-notifications"

[dependencies]
actix-web = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["clock"] }
jsonwebtoken = "9.3"
dotenvy = "0.15"
async-trait = "0.1"
thiserror = "2.0"
rand = "0.8"
mongodb = { version = "3.3", features = ["zlib-compression"] }
bson = "2.11"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
aws-config = "1.1"
aws-sdk-s3 = "1.17"
aws-credential-types = "1.1"
http = "1.1"
uuid = { version = "1.18", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hostname = "0.4"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

